# test-plan-documentation-generator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  CI_FIXES.md  Cargo.toml  Dockerfile  GUIDE.md  Makefile  PIPELINE_VERIFICATION.md  README.md  check-pipeline-status.sh  clippy.toml  package-lock.json  package.json  setup-dev-env.sh  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
backlog/: config.yml
backlog/tasks/: tpdg-1 - Tera-filters-for-report.md  tpdg-2 - Github-pipeline.md  tpdg-2 - Gitlab-pipeline-one-single-docker-layer.md
data/: output.expected.md  test_plan_output.expected.adoc  test_results_output.expected.adoc
data/container/: template.j2  template_asciidoc.adoc
data/dataset_4_GSMA/: output.expected.md  test_plan_output.expected.adoc  test_results_output.expected.adoc
data/test_case/: filter_test_01_TC.yml  filter_test_02_AN.yml  filter_test_03_IN.yml  filter_test_04_DM.yml  gsma_4.4.2.4_AN.yml  gsma_4.4.2.5_DM.yml  gsma_4.4.2.6_IN.yml
data/test_results/: result_template_asciidoc.adoc
data/testcase_results_container/: data_sample.yml  schema.json  template_asciidoc.adoc
docs/: README.md  filters-reference.md  schema-reference.md  template-authoring-guide.md
docs/examples/: README.md  analysis-case-example.yml  demonstration-case-example.yml  filter-usage-example.yml  inspection-case-example.yml  test-case-example.yml
scripts/: install-sccache.sh
scripts/lib/: logger.sh
src/: main.rs
tests/: e2e.rs
tests/fixtures/: custom_filters_template.tera
(+44 files in other folders)
