[package]
name = "tpdg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tera = "1.20.1"
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"
serde_yaml = "0.9.34+deprecated"
jsonschema = "0.16"
libc = "0.2"
regex = "1"

[dev-dependencies]
insta = { version = "1.44.3", features = ["redactions"]}
tempfile = "3.24.0"